# chatgpt-desktop-app

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: base.css  main.tsx  routes.tsx  types.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: ask.js
src-tauri/src/: main.rs
src-tauri/src/core/: cmd.rs  conf.rs  constant.rs  mod.rs  setup.rs  template.rs
src/components/: WinTitlebar.tsx
src/hooks/: useInfo.tsx  useTheme.tsx
src/icons/: ArrowLeft.tsx  Ask.tsx  Link.tsx  Pin.tsx  Reload.tsx  SVGWrap.tsx  Send.tsx  ThemeDark.tsx  ThemeLight.tsx  ThemeSystem.tsx  UnPin.tsx  WindowClose.tsx  WindowMaximize.tsx  WindowMinimize.tsx  WindowRestore.tsx
src/view/: Ask.tsx  Settings.tsx  Titlebar.tsx
